# blog-backend

./: README.md  pyproject.toml
templates/: base.html  blog-details.html  contact.html  index.html
