[project]
name = "blog-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "django==2.2.24",
    "django-debug-toolbar==2.2.1",
    "environs==5.2.1",
    "folium==0.10.0",
    "pillow>=11.2.1",
    "setuptools>=80.9.0",
]
